# foundersignal

./: .env  .env.example  .gitignore  CHANGELOG.md  INTEGRATIONS.md  Makefile  README.md  TECHNICAL.md  agents.md  auditor.py  big_hack_hackthon.md  example.md  example.outs.json  main_prompt.txt  notes.txt  pyproject.toml  sample_idea.md
app/: __init__.py  config.py  main.py
app/agents/: __init__.py  ai_visibility.py  base.py  competitor_research.py  customer_validation_agent.py  idea_refinement.py  market_research.py  orchestrator.py  query_optimizer.py  target_audience.py  ui_spec.py  ux_flow.py  validation_scoring.py  verification.py
app/models/: __init__.py  schemas.py
app/routes/: __init__.py  agents.py  analyze.py  auth.py  health.py  video.py
app/services/: __init__.py  firebase_admin.py  hera_service.py  peec_service.py  persistence.py  storage.py  supabase_service.py  tavily_service.py  tts_service.py
app/services/llm/: __init__.py  base.py  gemini_provider.py  openai_provider.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: AuthScreen.tsx  HomeScreen.tsx  IdeaPromptBar.tsx  InterviewChatModal.tsx  MarketPulseLogo.tsx  StageDashboard.tsx
frontend/src/hooks/: useTypewriterPlaceholder.ts
frontend/src/utils/: markdown.ts
interviews/: interviews_20260425_175517.json
outputs/: idea_20260425_152058.json  idea_20260425_152929.json  idea_20260425_175445.json
product_decisions/: walkthrough.md
reports/: audit_report_20260425_144407.md  audit_report_20260425_152203.md  audit_report_20260425_153040.md  audit_report_20260425_175559.md
supabase/migrations/: 20260426_create_sessions.sql
tests/: __init__.py  conftest.py  list_models.py  scratch_stream.py  test_integrations.py
